more OpenAPI definitions, fixed notification deleting, FORUM_CHANGED_OWNERSHIP notification
